--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
+   <junit.jupiter.version>5.4.2</junit.jupiter.version>
   </properties>
   <dependencies>
     <dependency>
@@ -19,9 +20,9 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
